force-app/main/default/objects/ssot__FinancialApplicationItem__dlm/fields/ssot__ApplicantVisibleStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicantVisibleStatus__c</fullName>
    <label>Applicant Visible Status</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicantVisibleStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>