force-app/main/default/objects/ssot__FinancialApplicationItem__dlm/fields/ssot__ApplicationItemId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationItemId__c</fullName>
    <label>Application Item</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationItemId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>