force-app/main/default/objects/ssot__FinancialApplicationItem__dlm/fields/ssot__DownPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__DownPaymentAmount__c</fullName>
    <label>Down Payment Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DownPaymentAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>