force-app/main/default/objects/ssot__FinancialApplicationItem__dlm/fields/ssot__HasOptedAutomaticPayment__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasOptedAutomaticPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Opted Automatic Payment</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasOptedAutomaticPayment</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>