force-app/main/default/objects/ssot__FinancialApplicationItem__dlm/fields/ssot__HasOptedElectronicStatement__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasOptedElectronicStatement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Opted Electronic Statement</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasOptedElectronicStatement</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>