force-app/main/default/objects/ssot__FinancialApplicationItem__dlm/fields/ssot__IsCheckbookRequired__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsCheckbookRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Checkbook Required</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsCheckbookRequired</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>