force-app/main/default/objects/ssot__FinancialApplicationItem__dlm/fields/ssot__LoanPurposeDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoanPurposeDescription__c</fullName>
    <label>Loan Purpose</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoanPurposeDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>