force-app/main/default/objects/ssot__FinancialApplicationItem__dlm/fields/ssot__LoantoValueRatioNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoantoValueRatioNumber__c</fullName>
    <label>Loan to Value Ratio</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoantoValueRatioNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>