force-app/main/default/objects/ssot__FinancialApplicationItem__dlm/fields/ssot__OwnershipType__c.field-meta.xml
<CustomField>
    <fullName>ssot__OwnershipType__c</fullName>
    <label>Ownership Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OwnershipType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>