force-app/main/default/objects/ssot__FinancialApplicationItem__dlm/fields/ssot__RequestedTermMonths__c.field-meta.xml
<CustomField>
    <fullName>ssot__RequestedTermMonths__c</fullName>
    <label>Requested Term Months</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RequestedTermMonths</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>